[package]
name = "simple-battery"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/simple-battery"
homepage = "https://github.com/Dhruvesh08/simple-battery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"